# kelvinclaw

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE  OVERVIEW.md  README.md
.github/workflows/: manual-verify.yml  memory-kms-smoke.yml  plugin-abi-compat.yml  release-executables.yml  release-linux-executables.yml
apps/kelvin-gateway/: Cargo.toml
apps/kelvin-gateway/src/: channels.rs  lib.rs  main.rs  operator.rs  scheduler.rs
apps/kelvin-gateway/src/ingress/: discord.rs  mod.rs  slack.rs  telegram.rs  ui.rs
apps/kelvin-gateway/tests/: channel_conformance.rs  gateway_http_ingress.rs  gateway_ws.rs
apps/kelvin-gateway/web/: app.js  index.html  styles.css
apps/kelvin-host/: Cargo.toml
apps/kelvin-host/src/: main.rs
apps/kelvin-registry/: Cargo.toml
apps/kelvin-registry/src/: lib.rs  main.rs
apps/kelvin-registry/tests/: http_registry.rs
archive/kelvin-cli/: Cargo.toml
archive/kelvin-cli/src/: main.rs
archive/kelvin-runtime/: Cargo.toml
archive/kelvin-runtime/src/: lane_scheduler.rs  run_registry.rs  session_store.rs
crates/kelvin-brain/: Cargo.toml
crates/kelvin-brain/src/: installed_plugins.rs  kelvin_brain.rs  lib.rs  openclaw_brain.rs  providers.rs  wasm_skill_tool.rs
crates/kelvin-brain/tests/: core_contract_e2e.rs  mvp_secure_skill_e2e.rs
crates/kelvin-cli/: Cargo.toml
crates/kelvin-cli/src/: main.rs
crates/kelvin-core/: Cargo.toml
crates/kelvin-core/src/: brain.rs  error.rs  events.rs  lib.rs  memory.rs  model.rs  runtime.rs  sdk.rs  sessions.rs  tools.rs
crates/kelvin-core/tests/: sdk_nist_ai_rmf_1_0.rs  sdk_owasp_top10_ai_2025.rs  sdk_security_stability.rs
crates/kelvin-memory/: Cargo.toml
crates/kelvin-memory-api/: Cargo.toml  build.rs
crates/kelvin-memory-api/src/: lib.rs
crates/kelvin-memory-client/: Cargo.toml
crates/kelvin-memory-client/src/: lib.rs
crates/kelvin-memory-client/tests/: rpc_integration.rs
crates/kelvin-memory-controller/: Cargo.toml
crates/kelvin-memory-controller/src/: config.rs  controller.rs  module_runtime.rs
crates/kelvin-memory-controller/tests/: memory_controller_nist_ai_rmf_1_0.rs  memory_controller_owasp_top10_ai_2025.rs
crates/kelvin-memory-controller/tests/common/: mod.rs
crates/kelvin-memory/src/: factory.rs  fallback.rs  in_memory.rs  lib.rs  markdown.rs
crates/kelvin-runtime/: Cargo.toml
crates/kelvin-runtime/src/: agent_runtime.rs  event_sinks.rs  lib.rs  tool_registry.rs
crates/kelvin-sdk/: Cargo.toml
crates/kelvin-sdk/src/: lib.rs  toolpack.rs
crates/kelvin-sdk/src/scheduler/: cron.rs  mod.rs  persistence.rs  store.rs  store_tests.rs
crates/kelvin-sdk/tests/: tool_sandbox_nist_ai_rmf_1_0.rs
crates/kelvin-wasm/: Cargo.toml
crates/kelvin-wasm/src/: channel_host.rs  lib.rs  model_host.rs
docker/: Dockerfile.plugin-author  Dockerfile.test
docs/: CORE_ADMISSION_POLICY.md  GETTING_STARTED.md  KELVIN_CORE_SDK.md  PLUGIN_INSTALL_FLOW.md  ROOT_VS_SDK.md  RUST_DEVELOPER_QUICKSTART.md  SDK_NIST_AI_RMF_1_0.md  SDK_OWASP_TOP10_AI_2025.md  SDK_PRINCIPLES.md  SDK_TEST_MATRIX.md  anthropic-plugin-install-and-run.md  architecture.md  build-a-model-plugin.md  channel-plugin-abi.md  compatibility-contracts.md  gateway-protocol.md  kelvin-gap-analysis.md  memory-controller-deployment-profiles.md  memory-rpc-contract.md  model-plugin-abi.md  openai-plugin-install-and-run.md  openclaw-gap-analysis.md  openrouter-plugin-install-and-run.md  plugin-author-kit.md  plugin-index-schema.md  plugin-quality-tiers.md  runtime-container-first-run.md  trusted-executive-wasm.md
docs/runbooks/: kelvin-gateway-service-management.md  memory-jwt-key-rotation.md
examples/kelvin-anthropic-plugin/: .gitignore  Cargo.toml  README.md  build.sh  plugin.json
examples/kelvin-anthropic-plugin/src/: lib.rs
examples/kelvin-openrouter-plugin/: Cargo.toml  README.md  build.sh  plugin.json
examples/kelvin-openrouter-plugin/payload/: README.md
examples/kelvin-openrouter-plugin/src/: lib.rs
plugins/kelvin-openai/: plugin.json  plugin.sig
plugins/kelvin-openai-src/: Cargo.toml
plugins/kelvin-openai-src/src/: lib.rs
plugins/kelvin-openai/payload/: kelvin_openai.wasm
release/: official-first-party-plugins.env
scripts/: docker-cache-prune.sh  first-run-success-rate.sh  install-kelvin-anthropic-plugin.sh  install-kelvin-browser-plugin.sh  install-kelvin-cli-plugin.sh  install-kelvin-openai-plugin.sh  install-kelvin-openrouter-plugin.sh  kelvin  kelvin-doctor.sh  kelvin-gateway-daemon.sh  kelvin-gateway-service-run.sh  kelvin-gateway-service.sh  kelvin-local-profile.sh  kelvin-plugin.sh  kelvin-release-launcher.cmd  kelvin-release-launcher.ps1  kelvin-release-launcher.sh  kelvin-setup.sh  kelvin-webchat.sh  kms-ed25519-public-key.sh  package-linux-release.sh  package-macos-release.sh  package-unix-release.sh  package-windows-release.ps1  plugin-author-docker.sh  plugin-discovery.sh  plugin-index-install.sh  plugin-install.sh  plugin-list.sh  plugin-sign.sh  plugin-uninstall.sh  plugin-update-check.sh  quickstart.sh  remote-test.sh  run-runtime-container.sh  test-cli-plugin-integration.sh  test-contracts.sh  test-docker.sh  test-e2e.sh  test-plugin-abi-compat.sh  (+5 more)
scripts/lib/: docker-cache.sh  rust-toolchain-path.sh
templates/plugin-author-kit/: README.md
templates/plugin-author-kit/wasm_model/: plugin.json.template
templates/plugin-author-kit/wasm_tool/: plugin.json.template
