[workspace]
members = [
  "apps/kelvin-host",
  "crates/kelvin-core",
  "crates/kelvin-sdk",
  "crates/kelvin-memory",
  "crates/kelvin-brain",
  "crates/kelvin-wasm",
  "crates/kelvin-memory-api",
  "crates/kelvin-memory-client",
  "crates/kelvin-memory-controller",
  "crates/kelvin-memory-module-sdk",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["KelvinClaw Contributors"]

[workspace.dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
walkdir = "2"
semver = "1"
wasmtime = "42"
base64 = "0.22"
sha2 = "0.10"
ed25519-dalek = "2"
tonic = { version = "0.12", features = ["transport", "tls"] }
prost = "0.13"
prost-types = "0.13"
tonic-build = "0.12"
protoc-bin-vendored = "3"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4", "serde"] }
wasmparser = "0.226"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
url = "2"
