[package]
name = "kelvin-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
futures-util.workspace = true
tokio-tungstenite.workspace = true
reqwest.workspace = true
url.workspace = true
kelvin-core = { path = "../../crates/kelvin-core" }
kelvin-sdk = { path = "../../crates/kelvin-sdk", default-features = false }
uuid.workspace = true

[dev-dependencies]
url.workspace = true

[features]
default = []
memory_rpc = ["kelvin-sdk/memory_rpc"]
memory_legacy_fallback = ["kelvin-sdk/memory_legacy_fallback"]
