[package]
name = "kelvin-host"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
kelvin-core = { path = "../../crates/kelvin-core" }
kelvin-sdk = { path = "../../crates/kelvin-sdk", default-features = false }

[features]
default = []
memory_rpc = ["kelvin-sdk/memory_rpc"]
memory_legacy_fallback = ["kelvin-sdk/memory_legacy_fallback"]
