[package]
name = "kelvin-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axum = "0.8"
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
tokio.workspace = true
kelvin-core = { path = "../../crates/kelvin-core" }

[dev-dependencies]
reqwest.workspace = true
