[package]
name = "kelvin-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["KelvinClaw Contributors"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
kelvin-sdk = { path = "../../crates/kelvin-sdk", default-features = false }

[features]
default = []
memory_rpc = ["kelvin-sdk/memory_rpc"]
memory_legacy_fallback = ["kelvin-sdk/memory_legacy_fallback"]

[workspace]
