[package]
name = "kelvin-runtime"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["KelvinClaw Contributors"]

[dependencies]
async-trait = "0.1"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
kelvin-core = { path = "../../crates/kelvin-core" }

[dev-dependencies]
kelvin-brain = { path = "../../crates/kelvin-brain" }
kelvin-memory = { path = "../../crates/kelvin-memory" }

[workspace]
