[package]
name = "kelvin-brain"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
semver.workspace = true
tokio.workspace = true
wasmparser.workspace = true
kelvin-core = { path = "../kelvin-core" }
kelvin-wasm = { path = "../kelvin-wasm" }

[dev-dependencies]
kelvin-memory = { path = "../kelvin-memory" }
wat = "1"
