[package]
name = "kelvin-memory-controller"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["profile_minimal"]
provider_sqlite = []
provider_postgres = []
provider_object_store = []
provider_vector_cpu = []
provider_vector_nvidia = []
provider_vector_metal = []
profile_iphone = ["provider_sqlite", "provider_object_store", "provider_vector_metal"]
profile_linux_gpu = ["provider_sqlite", "provider_object_store", "provider_vector_nvidia"]
profile_minimal = ["provider_sqlite"]

[dependencies]
async-trait.workspace = true
jsonwebtoken.workspace = true
kelvin-core = { path = "../kelvin-core" }
kelvin-memory-api = { path = "../kelvin-memory-api" }
kelvin-memory-module-sdk = { path = "../kelvin-memory-module-sdk" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
uuid.workspace = true
wasmparser.workspace = true
wasmtime.workspace = true
wat = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
