[package]
name = "kelvin-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
serde_json.workspace = true
tokio.workspace = true
kelvin-core = { path = "../kelvin-core" }

[dev-dependencies]
kelvin-brain = { path = "../kelvin-brain" }
kelvin-memory = { path = "../kelvin-memory" }
