[package]
name = "kelvin-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
kelvin-core = { path = "../kelvin-core" }
wasmtime.workspace = true
serde_json.workspace = true
reqwest.workspace = true
url.workspace = true

[dev-dependencies]
wat = "1"
