[package]
name = "kelvin-openai-wasm"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
strip = true
codegen-units = 1

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace]
